LuxStudio/depl/saturn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saturn
  labels:
    environment: production
