LuxStudio/depl/saturn/deployment.yaml
# MinIO Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: saturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          emptyDir: {}

---

# LuxStudio App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxstudio-deployment
  namespace: saturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luxstudio-app
  template:
    metadata:
      labels:
        app: luxstudio-app
    spec:
      containers:
        - name: luxstudio-container
          image: nginx:latest
          ports:
            - containerPort: 80
