LuxStudio/depl/saturn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: luxstudio-service
  namespace: saturn
spec:
  selector:
    app: luxstudio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
